added some features for dizzyness

--- a/changes.txt
+++ b/changes.txt
@@ -2,3 +2,4 @@ added the pictures instead of those blocks
 fixed the window moving bug which every time we try to move the pac man upwards or downwards the window also used to move
 added more ghosts to increase the difficulty
 when made dizzy their pictures or faces change and a different emotioned png is added
+when dizzy i made them to freeze at their places for 5 seconds to balance out the difficulty
